fixed responsive in sample events

--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
                         </div>
                         <div class="reviewsContent">
                             <p class="reviewsContent__text reviewsContent__body">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                                Ut enim ad minim </p>
-                            <p class="reviewsContent__text reviewsContent__author">~ J. Michels ~</p>
+                                Ut enim ad minim 
+                            <p class="reviewsContent__text reviewsContent__author">~ J. Michels ~</p></p>
                         </div>
                     </section>
                 </section>
