added hover effect to navbar

--- a/index.html
+++ b/index.html
@@ -26,26 +26,49 @@
                 <nav class="headerNavMenu">
                         
                     <ul class="navList navColumns">
+                        <div class="svg-wrapper">
+                            <svg height="40" width="150" xmlns="http://www.w3.org/2000/svg">
+                                <rect id="shape" height="40" width="150"/>
+                                    <li class="navList__item text">
+                                        <a href="#" class="navList__link"><span class="spot">Home</span></a>
+                                    </li>
+                            </svg>
+                        </div>
 
-                        <li class="navList__item">
-                            <a href="#" class="navList__link">Home</a>
-                        </li>
+                        <div class="svg-wrapper">
+                            <svg height="40" width="150" xmlns="http://www.w3.org/2000/svg">
+                                <rect id="shape" height="40" width="150" />
+                                    <li class="navList__item">
+                                        <a href="#" class="navList__link"><span class="spot">Menu</span></a>
+                                    </li>
+                            </svg>
+                        </div>
+                        <div class="svg-wrapper">
+                            <svg height="40" width="150" xmlns="http://www.w3.org/2000/svg">
+                                <rect id="shape" height="40" width="150" />
+                                    <li class="navList__item">
+                                        <a href="#" class="navList__link"><span class="spot">Blog</span></a>
+                                    </li>
+                            </svg>
+                        </div>
 
-                        <li class="navList__item">
-                            <a href="#" class="navList__link">Menu</a>
-                        </li>
+                        <div class="svg-wrapper">
+                            <svg height="40" width="150" xmlns="http://www.w3.org/2000/svg">
+                                <rect id="shape" height="40" width="150" />
+                                    <li class="navList__item">
+                                        <a href="#" class="navList__link"><span class="spot">Contact</span></a>
+                                    </li>
+                            </svg>
+                        </div>
 
-                        <li class="navList__item">
-                            <a href="#" class="navList__link">Blog</a>
-                        </li>
-
-                        <li class="navList__item">
-                            <a href="#" class="navList__link">Contact</a>
-                        </li>
-
-                        <li class="navList__item">
-                            <a href="#" class="navList__link">About Us</a>
-                        </li>
+                        <div class="svg-wrapper">
+                            <svg height="40" width="150" xmlns="http://www.w3.org/2000/svg">
+                                <rect id="shape" height="40" width="150" />
+                                    <li class="navList__item">
+                                        <a href="#" class="navList__link"><span class="spot">About Us</span></a>
+                                    </li>
+                            </svg>  
+                        </div>
                     </ul>
                 </nav>
             </div>
@@ -54,7 +77,7 @@
             <div class="headerContent">
                 <h1 class="headerContent__heading">Welcome</h1>
                 <h2 class="headerContent__subHeading">to my restaurant website</h2>
-                <button class="button button--orange button--hover">Start</button>
+                <button class="button button--orange button--hover buttonhov">Start</button>
             </div>
             <!-- TOP NAV END -->
         </div>
@@ -92,7 +115,7 @@
                         <h3>About Us</h3>
                         <p class="aboutUsContentText__body">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                         Ut enim ad minim veniam, quis nostrud.</p>
-                        <button class="button button--orange button--hover">More</button>
+                        <button class="button button--orange button--hover buttonhov">More</button>
                     </div>
                 </div>
             </div>
@@ -107,7 +130,7 @@
                     <p class="welcomeContent__body">Suspendisse convallis turpis sem, nec tincidunt mauris tincidunt sed. Nunc vulputate felis eu nunc moletie molestie vel tempus
                         purus. Donec sed tellus mi. Fusce tincidunt tudin arcu, nec fringilla ex he rerit eget. Maecenas fringilla neque eu est
                         tincon. Vivamus consequat variusimperdiet. Mauris laoreet risus pharetra ollis.</p>
-                    <button class="button button--black button--hover">View</button>
+                    <button class="button button--black button--hover buttonhov">View</button>
                 </div>
             </div>
         </section>
