added more hover

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <div class="svg-wrapper">
                             <svg height="40" width="150" xmlns="http://www.w3.org/2000/svg">
                                 <rect id="shape" height="40" width="150"/>
-                                    <li class="navList__item text">
+                                    <li class="navList__item text" tabindex="1">
                                         <a href="#" class="navList__link"><span class="spot">Home</span></a>
                                     </li>
                             </svg>
@@ -38,7 +38,7 @@
                         <div class="svg-wrapper">
                             <svg height="40" width="150" xmlns="http://www.w3.org/2000/svg">
                                 <rect id="shape" height="40" width="150" />
-                                    <li class="navList__item">
+                                    <li class="navList__item" tabindex="2">
                                         <a href="#" class="navList__link"><span class="spot">Menu</span></a>
                                     </li>
                             </svg>
@@ -46,7 +46,7 @@
                         <div class="svg-wrapper">
                             <svg height="40" width="150" xmlns="http://www.w3.org/2000/svg">
                                 <rect id="shape" height="40" width="150" />
-                                    <li class="navList__item">
+                                    <li class="navList__item" tabindex="3">
                                         <a href="#" class="navList__link"><span class="spot">Blog</span></a>
                                     </li>
                             </svg>
@@ -55,7 +55,7 @@
                         <div class="svg-wrapper">
                             <svg height="40" width="150" xmlns="http://www.w3.org/2000/svg">
                                 <rect id="shape" height="40" width="150" />
-                                    <li class="navList__item">
+                                    <li class="navList__item" tabindex="4">
                                         <a href="#" class="navList__link"><span class="spot">Contact</span></a>
                                     </li>
                             </svg>
@@ -64,7 +64,7 @@
                         <div class="svg-wrapper">
                             <svg height="40" width="150" xmlns="http://www.w3.org/2000/svg">
                                 <rect id="shape" height="40" width="150" />
-                                    <li class="navList__item">
+                                    <li class="navList__item" tabindex="5">
                                         <a href="#" class="navList__link"><span class="spot">About Us</span></a>
                                     </li>
                             </svg>  
@@ -77,7 +77,7 @@
             <div class="headerContent">
                 <h1 class="headerContent__heading">Welcome</h1>
                 <h2 class="headerContent__subHeading">to my restaurant website</h2>
-                <button class="button button--orange button--hover buttonhov">Start</button>
+                <button class="button button--orange button--hover buttonhov" tabindex="6">Start</button>
             </div>
             <!-- TOP NAV END -->
         </div>
@@ -217,7 +217,7 @@
                 <h2>Ask a question</h2>
                 <form action="POST" class="askQuestionForm" name="askQuestionForm">
                     <input type="text" name="question" class="askQuestionForm__question" placeholder="Your Message">
-                    <input type="submit" class="button button--orange button--hover" value="Send">
+                    <input type="submit" class="button button--orange button--hover buttonhov" value="Send">
                 </form>
             </div>
         </section>
