removed svg hover states due to performance issues

--- a/index.html
+++ b/index.html
@@ -23,52 +23,23 @@
                 <nav class="headerNav__logo">
                     <h1>restaurant</h1>
                 </nav> 
-                <nav class="headerNavMenu">
-                        
-                    <ul class="navList navColumns">
-                        <div class="svg-wrapper">
-                            <svg height="40" width="150" xmlns="http://www.w3.org/2000/svg">
-                                <rect id="shape" height="40" width="150"/>
-                                    <li class="navList__item text" tabindex="1">
-                                        <a href="#" class="navList__link"><span class="spot">Home</span></a>
-                                    </li>
-                            </svg>
-                        </div>
-
-                        <div class="svg-wrapper">
-                            <svg height="40" width="150" xmlns="http://www.w3.org/2000/svg">
-                                <rect id="shape" height="40" width="150" />
-                                    <li class="navList__item" tabindex="2">
-                                        <a href="#" class="navList__link"><span class="spot">Menu</span></a>
-                                    </li>
-                            </svg>
-                        </div>
-                        <div class="svg-wrapper">
-                            <svg height="40" width="150" xmlns="http://www.w3.org/2000/svg">
-                                <rect id="shape" height="40" width="150" />
-                                    <li class="navList__item" tabindex="3">
-                                        <a href="#" class="navList__link"><span class="spot">Blog</span></a>
-                                    </li>
-                            </svg>
-                        </div>
-
-                        <div class="svg-wrapper">
-                            <svg height="40" width="150" xmlns="http://www.w3.org/2000/svg">
-                                <rect id="shape" height="40" width="150" />
-                                    <li class="navList__item" tabindex="4">
-                                        <a href="#" class="navList__link"><span class="spot">Contact</span></a>
-                                    </li>
-                            </svg>
-                        </div>
-
-                        <div class="svg-wrapper">
-                            <svg height="40" width="150" xmlns="http://www.w3.org/2000/svg">
-                                <rect id="shape" height="40" width="150" />
-                                    <li class="navList__item" tabindex="5">
-                                        <a href="#" class="navList__link"><span class="spot">About Us</span></a>
-                                    </li>
-                            </svg>  
-                        </div>
+                <nav class="headerNavMenu"> 
+                    <ul class="navList navColumns">                        
+                        <li class="navList__item" tabindex="1">
+                            <a href="#" class="navList__link"><span class="spot">Home</span></a>
+                        </li>                    
+                        <li class="navList__item" tabindex="2">
+                            <a href="#" class="navList__link"><span class="spot">Menu</span></a>
+                        </li>        
+                        <li class="navList__item" tabindex="3">
+                            <a href="#" class="navList__link"><span class="spot">Blog</span></a>
+                        </li>                
+                        <li class="navList__item" tabindex="4">
+                            <a href="#" class="navList__link"><span class="spot">Contact</span></a>
+                        </li>
+                        <li class="navList__item" tabindex="5">
+                            <a href="#" class="navList__link"><span class="spot">About Us</span></a>
+                        </li>                        
                     </ul>
                 </nav>
             </div>
@@ -346,9 +317,9 @@
                 <div class="footerSocial">
                     <div class="footerSocial__cell">
                         <ul>
-                            <li><i class="fab fa-facebook-square"></i></li>
-                            <li><i class="fab fa-instagram"></i></li>
-                            <li><i class="fab fa-pinterest-p"></i></li>
+                            <li class="facebook"><a class="socialLinks" href="#"><i class="fab fa-facebook-square"></i></a></li>
+                            <li class="instagram"><a class="socialLinks" href="#"><i class="fab fa-instagram"></i></a></li>
+                            <li class="pinterest"><a class="socialLinks" href="#"><i class="fab fa-pinterest-p"></i></a></li>
                         </ul>
                     </div>
                 </div>
